--- a/templates/layout.html
+++ b/templates/layout.html
@@ -34,11 +34,8 @@
             <div class="navbar-end">
             <div class="navbar-item">
                 <div class="buttons">
-                <a class="button is-primary" href="/login?signup=true">
-                    <strong>Sign up</strong>
-                </a>
-                <a class="button is-light" href="/login">
-                    Log in
+                <a class="button is-primary" href="/login">
+                    Login
                 </a>
                 </div>
             </div>
