--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,38 +7,55 @@
 </head>
 <body>
     <nav class="navbar" role="navigation" aria-label="main navigation">
-        <div class="navbar-brand">
-            <a class="navbar-item" href="https://bulma.io">
-            <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28" />
-            </a>
-
-            <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            <span aria-hidden="true"></span>
-            </a>
-        </div>
-
-        <div id="navbarBasicExample" class="navbar-menu">
-            <div class="navbar-start">
-            <a class="navbar-item" href="/about">
-                About
-            </a>
-
-            <a class="navbar-item" href="/dashboard">
-                Dashboard
-            </a>
-
-            </div>
-
-            <div class="navbar-end">
-            <div class="navbar-item">
-                <div class="buttons">
-                <a class="button is-primary" href="/login">
-                    Login
+        <div class="container">
+            <div class="navbar-brand">
+                <a class="navbar-item" href="https://bulma.io">
+                <img src="https://bulma.io/images/bulma-logo.png" width="112" height="28" />
                 </a>
-                </div>
+
+                <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                </a>
             </div>
+
+            <div id="navbarBasicExample" class="navbar-menu">
+                <div class="navbar-start">
+                <a class="navbar-item" href="/about">
+                    About
+                </a>
+
+                <a class="navbar-item" href="/dashboard">
+                    Dashboard
+                </a>
+
+                </div>
+
+                <div class="navbar-end">
+                    {% if request["user"] %}
+                        <div class="navbar-item has-dropdown is-hoverable mt-3">
+                            <p style="color: hsl(0, 0%, 21%)" class="navbar-link">{{request["user"]["username"]}}</p>
+                            <div class="navbar-dropdown">
+                                <a class="navbar-item" href="/settings">
+                                    Settings
+                                </a>
+                                <hr class="navbar-divider" />
+                                <a class="navbar-item has-text-danger" href="/api/auth/logout">
+                                    Logout
+                                </a>
+                            </div>
+                    </div>
+                    {% else %}
+                        <div class="navbar-item">
+                            <div class="buttons">
+                            <a class="button is-primary" href="/login">
+                                Login
+                            </a>
+                            </div>
+                        </div>
+                    {% endif %}
+                </div>
             </div>
         </div>
     </nav>
