--- a/templates/settings.html
+++ b/templates/settings.html
@@ -1,26 +1,29 @@
 {% extends "layout.html" %}
 
 {% block title %}
-Testno
+Settings
 {% endblock %}
 
-{% block body %}
-    <div class="is-loading"></div>
-    <div class="container">
-        <div class="column is-4 is-offset-4">
-            <div class="box">
-                <h2 class="title is-2">API Key</h2>
-                <div class="control">
-                    <input id="api-key" class="input block" type="password" readonly value="{{request['user']['api_key']}}"/>
-                    <div class="buttons has-addons">
-                        <button class="button is-primary is-light" id="toggle-show-api-key">Show</button>
-                        <button class="button is-info is-light" id="copy-api-key">Copy</button>
-                        <button class="button is-danger is-light js-modal-trigger" data-target="regen-modal">
-                            Regenerate
-                        </button>
-                    </div>
-                </div>
+{% block main %}
+    <div class="box">
+        <h2 class="title is-2">API Key</h2>
+        <div class="control">
+            <input id="api-key" class="input block" type="password" readonly value="{{request['user']['api_key']}}"/>
+            <div class="buttons has-addons">
+                <button class="button is-primary is-light" id="toggle-show-api-key">Show</button>
+                <button class="button is-info is-light" id="copy-api-key">Copy</button>
+                <button class="button is-danger is-light js-modal-trigger" data-target="regen-modal">
+                    Regenerate
+                </button>
             </div>
+        </div>
+    </div>
+
+    <div class="box">
+        <h2 class="title is-2">Account Management</h2>
+        <div class="buttons has-addons">
+            <a class="button is-warning is-light" href="/api/auth/login?provider={{request['user']['oauth_provider']}}">Refresh User Info</a>
+            <button class="button is-danger is-light js-modal-trigger" data-target="delete-modal">Delete Account</button>
         </div>
     </div>
 
@@ -30,12 +33,34 @@ Testno
         <div class="modal-content">
           <div class="box">
             <div id="regen-content">
-                <h2 class="title is-2 has-text-danger">Danger</h2>
-                <p>Clicking this button will immediately revoke your current API Key. There is no going back.</p>
+                <h2 class="title is-2">Danger</h2>
+                <p>Clicking this button will immediately revoke your current API Key and generate a new one. You will not be able to use your old API Key anymore.</p>
                 <button class="button is-danger block mt-2" id="regen-btn">I understand, regenerate my API Key</button>
             </div>
             <p class="is-hidden" id="regen-success">Successfully regenerated your API Key</p>
-            <footer class="is-size-7 mt-2">Click anywhere to exit</footer>
+            <footer class="is-size-7 mt-3">Click anywhere to exit</footer>
+          </div>
+        </div>
+    </div>
+
+    <div id="delete-modal" class="modal">
+        <div class="modal-background"></div>
+      
+        <div class="modal-content">
+          <div class="box">
+            <div id="regen-content">
+                <h2 class="title is-2">Danger</h2>
+                <p class="block">Clicking this button will delete your account, including all items you have created.</p>
+                <div class="field">
+                    <label class="label">Enter your username</label>
+                    <div class="control">
+                      <input class="input" type="text" placeholder="{{request['user']['username']}}" autocomplete="off" id="delete-username-input">
+                      <a href="/api/auth/delete?redirect=True" class="button is-danger block mt-2" id="delete-btn" disabled>Delete Account</a>
+                    </div>
+                </div>
+                
+            </div>
+            <footer class="is-size-7 mt-3">Click anywhere to exit</footer>
           </div>
         </div>
     </div>
