created dummy values for url shortner

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -1,24 +1,24 @@
 {% extends "layout.html" %}
 
+
+
 {% block main %}
-    <div class="box">
-        <div class="">
-            <h2 class="title is-2">Hello, {{request["user"]["username"]}}</h2>
-            <hr style="border-style: inset;border-width: 1px;">
+    <div>
+        <h2 class="title is-2">Hello, {{request["user"]["username"]}}</h2>
+        <hr style="border-style: inset;border-width: 1px;">
+    </div>
+    <div class="tile is-ancestor">
+        <div class="tile is-parent">
+        <article class="tile is-child box">
+            <p class="title">Images</p>
+            <p class="subtitle">You have 30 uploaded images</p>
+        </article>
         </div>
-        <div class="tile is-ancestor">
-            <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">Images</p>
-                <p class="subtitle">You have 30 uploaded images</p>
-            </article>
-            </div>
-            <div class="tile is-parent">
-            <article class="tile is-child box">
-                <p class="title">URL Shortner</p>
-                <p class="subtitle">You have 15 shortened URLs</p>
-            </article>
-            </div>
+        <div class="tile is-parent">
+        <article class="tile is-child box">
+            <p class="title">URL Shortner</p>
+            <p class="subtitle">You have 15 shortened URLs</p>
+        </article>
         </div>
     </div>
 {% endblock %}
