--- a/templates/shortner.html
+++ b/templates/shortner.html
@@ -78,7 +78,7 @@ URL Shortner
               <div class="box">
                 <div>
                     <h2 class="title is-2">Danger</h2>
-                    <p class="block" id="delete-text"></p>
+                    <p id="delete-text"></p>
                     <button class="button is-danger block mt-2" id="delete-btn">Delete Short URL</button>
                 </div>
                 <footer class="is-size-7 mt-3">Click anywhere to exit</footer>
