--- a/templates/shortner.html
+++ b/templates/shortner.html
@@ -10,12 +10,23 @@ URL Shortner
         <hr style="border-style: inset;border-width: 1px;">
     </div>
 
-    <form class="field has-addons" id="create-form">
-        <div class="control is-expanded">
-            <input class="input" type="url" placeholder="https://meizuflux.com" id="create-input">
+    <form class="field" id="create-form" autocomplete="off">
+        <div class="field">
+            <label class="label">Key</label>
+            <div class="control">
+                <input class="input" type="text" placeholder="Something to identify the URL" id="create-key">
+            </div>
+            <p class="help" id="create-key-help">Leave this blank to have a random key generated for you</p>
+        </div>
+        <div class="field">
+            <label class="label">URL</label>
+            <div class="control">
+                <input class="input" type="text" placeholder="Your long URL" id="create-url">
+                <p class="help" id="create-url-help"></p>
+            </div>
         </div>
         <div class="control">
-            <button class="button is-primary" id="create-btn" type="submit">Shorten</button>
+            <button class="button is-info" id="create-btn" type="submit">Shorten</button>
         </div>
     </form>
 
@@ -36,8 +47,8 @@ URL Shortner
                 <tbody>
                     {% for i, url in enumerate(values, start=1) %}
                         <tr class="shortner-table-row" id="{{url['key']}}">
-                            <td><a href="/{{url['key']}}">{{url["key"]}}</a></td>
-                            <td><a href="{{url['destination']}}">{{url['destination']}}</a></td>
+                            <td><a href="/{{url['key']}}">{{truncate(url["key"], 15)}}</a></td>
+                            <td><a href="{{url['destination']}}">{{truncate(url['destination'], 64)}}</a></td>
                             <td>{{url['clicks']}}</td>
                             <td>{{url["creation_date"].strftime("%d %B %Y")}}</td>
                             <td>
