--- a/templates/dashboard/shortner.html
+++ b/templates/dashboard/shortner.html
@@ -1,7 +1,7 @@
 {% extends "dashboard/layout.html" %}
 
 {% block title %}
-URL Shortner
+    URL Shortner
 {% endblock title %}
 
 {% block main %}
@@ -31,7 +31,7 @@ URL Shortner
     </form>
 
     {% if values == [] %}
-        <p class="title is-3">You haven't shortened any urls. Shorten your first one above!</p>
+        <p class="title is-3">No shortened URLs.</p>
     {% else %}
         <div class="table-container">
             <table class="table is-striped is-hoverable is-fullwidth is-bordered" data-row-len="{{len(values)}}">
