--- a/templates/base.html
+++ b/templates/base.html
@@ -3,7 +3,7 @@
     <title>{% block title %}{% endblock %}</title>
     <link rel="icon" type="image/x-icon" href="https://meizuflux.com/favicon.ico">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.9.3/css/bulma.min.css" integrity="sha512-IgmDkwzs96t4SrChW29No3NXBIBv8baW490zk5aXvhCD8vuZM3yUSkbyTBcXohkySecyzIrUwiF/qV0cuPcL3Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script defer data-domain="mzf.one" src="http://analytics.meizuflux.com/js/plausible.js"></script>
+    <script defer data-domain="mzf.one" src="https://analytics.meizuflux.com/js/script.outbound-links.js"></script>
     {% block head %}
     {% endblock %}
 </head>
