--- a/templates/dashboard/users.html
+++ b/templates/dashboard/users.html
@@ -23,7 +23,7 @@ URL Shortner
             </thead>
             <tbody>
                 {% for i, u in enumerate(users, start=1) %}
-                    <tr class="users-table-row" id="{{u['user_id']}}">
+                    <tr class="users-table-row" data-id="{{u['user_id']}}">
                         <td>{{truncate(u["username"], 15)}}</td>
                         <td><code>{{u["user_id"]}}</code></a></td>
                         <td>{{u['oauth_provider']}}</td>
